the Fronted works fine(map+chat+thread)
